<?xml version="1.0" encoding="utf-8"?>
<GridLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:columnCount="2"
android:rowCount="10"
tools:context=".MainActivity">

    <TextView
        android:id="@+id/telaTextView"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_rowSpan="1"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/poster" />

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="490dp"
    android:layout_row="1"
    android:layout_rowSpan="7"
    android:layout_column="0"
    android:layout_columnSpan="2"
    android:columnCount="2"
    android:rowCount="3">

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="410dp"
        android:layout_height="490dp"
        android:layout_row="0"
        android:layout_column="0"
        />

</GridLayout>

<Button
    android:id="@+id/textButton"
    android:layout_width="205dp"
    android:layout_height="wrap_content"
    android:text="@string/texto"
    android:layout_row="9"
    android:layout_column="0"
    android:onClick="exibeTexto"/>

<Button
    android:id="@+id/pictureButton"
    android:layout_width="205dp"
    android:layout_height="wrap_content"
    android:text="@string/fotos"
    android:layout_row="9"
    android:layout_column="1"
    android:onClick="exibeFotos"/>

</GridLayout>